// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests rendering MissingPalletWorklistCard Renders the MissingPalletWorklistCard 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#ffffffff",
      "borderColor": "#dbecff",
      "marginBottom": 2,
      "opacity": 1,
      "paddingHorizontal": 15,
      "paddingVertical": 5,
    }
  }
  testID="missingPalletWorklistCard"
>
  <View>
    <Text
      style={
        {
          "color": "#d938ab",
          "fontSize": 12,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.MISSING_PALLET_WORKLIST.MISSING_PALLET_LABEL" translation]
    </Text>
  </View>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.PALLET_ID" translation]: 7988
      </Text>
      <Text
        style={
          {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.REPORTED_DATE" translation]: Invalid date
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "column",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.LAST_LOCATION" translation]: A1-1
      </Text>
      <Text
        style={
          {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.REPORTED_BY" translation]: vn51wu8
      </Text>
    </View>
  </View>
</View>
`;

exports[`Tests rendering MissingPalletWorklistCard Renders the MissingPalletWorklistCard with expanded prop as true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#ffffffff",
      "borderColor": "#dbecff",
      "marginBottom": 2,
      "opacity": 1,
      "paddingHorizontal": 15,
      "paddingVertical": 5,
    }
  }
  testID="missingPalletWorklistCard"
>
  <View>
    <Text
      style={
        {
          "color": "#d938ab",
          "fontSize": 12,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.MISSING_PALLET_WORKLIST.MISSING_PALLET_LABEL" translation]
    </Text>
  </View>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.PALLET_ID" translation]: 7989
      </Text>
      <Text
        style={
          {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.REPORTED_DATE" translation]: Invalid date
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "column",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.LAST_LOCATION" translation]: A1-3
      </Text>
      <Text
        style={
          {
            "fontSize": 12,
            "paddingVertical": 2,
          }
        }
      >
        [missing "en.MISSING_PALLET_WORKLIST.REPORTED_BY" translation]: vn51wu8
      </Text>
    </View>
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <Icon
        color="#000000"
        name="navigate-next"
        size={40}
        testID="navigate-next-icon"
      />
    </View>
  </View>
  <View
    style={
      {
        "alignContent": "space-between",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginVertical": 5,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 45,
          },
          {
            "flex": 1,
            "fontSize": 12,
            "paddingRight": 10,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#0071e9",
              "borderRadius": 5,
              "elevation": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="addLocationButton"
        >
          <Text
            style={
              {
                "color": "#ffffffff",
                "fontFamily": "Roboto-Medium",
                "fontSize": 16,
                "fontWeight": "normal",
                "textAlign": undefined,
              }
            }
          >
            [missing "en.MISSING_PALLET_WORKLIST.ADD_LOCATION" translation]
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "height": 45,
          },
          {
            "flex": 1,
            "fontSize": 12,
            "paddingRight": 10,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#D6512D",
              "borderRadius": 5,
              "elevation": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="deletePalletButton"
        >
          <Text
            style={
              {
                "color": "#ffffffff",
                "fontFamily": "Roboto-Medium",
                "fontSize": 16,
                "fontWeight": "normal",
                "textAlign": undefined,
              }
            }
          >
            [missing "en.MISSING_PALLET_WORKLIST.DELETE_PALLET" translation]
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
